# YOLOMatic

./: .env.example  .gitignore  404.html  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MODELS.md  README.md  SECURITY.md  YOLO_GUIDE.md  Yolov_trainer.py  ai.txt  config.yaml  config_generator.py  humans.txt  index.html  llms-full.txt  llms.txt  mkdocs.yml  models.py  pyproject.toml  requirements.txt  run.py  sam3.py  sitemap.xml  udo apt update  ultralytics-training config.txt  ultralytics-training logs.txt
.agents/skills/caveman-compress/scripts/: cli.py  compress.py  detect.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  TOPICS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  release.yml
advanced/training-parameters/: index.html
assets/: demo.tape
assets/javascripts/: schema.js
changelog/: index.html
citation/: index.html
comparison/: index.html
configs/: YOLO26x-Pose-Tunned.yaml
configs/augmentation_profiles/: Original-Minimal.yaml  general_detection.yaml  minimal.yaml  vegetation_aerial_optimal.yaml  yolo-x-fit.yaml
contributing/: index.html
docs/: changelog.md  citation.md  comparison.md  contributing.md  faq.md  index.md
docs/advanced/: training-parameters.md
docs/assets/favicon/: site.webmanifest
docs/assets/javascripts/: schema.js
docs/assets/stylesheets/: extra.css
docs/getting-started/: first-training-run.md  install.md  quickstart.md
docs/guides/: augmentation.md  benchmarking.md  clearml.md  cloud-upload.md  datasets.md  export.md  models.md  rf-detr.md  sam.md  tensorboard.md  yolo.md
docs/reference/: cli-commands.md  configuration.md  ndjson-conversion.md  settings.md  smart-split.md
docs/superpowers/plans/: 2026-05-07-roboflow-upload-toggle.md
docs/superpowers/specs/: 2026-04-23-config-profile-wizard-design.md  2026-04-23-cuda-auto-repair-design.md  2026-04-30-predict-folder-progress-workers-design.md  2026-05-07-roboflow-upload-toggle-design.md
faq/: index.html
getting-started/first-training-run/: index.html
getting-started/install/: index.html
getting-started/quickstart/: index.html
guides/augmentation/: index.html
guides/benchmarking/: index.html
guides/clearml/: index.html
guides/cloud-upload/: index.html
guides/datasets/: index.html
guides/export/: index.html
guides/models/: index.html
guides/rf-detr/: index.html
guides/sam/: index.html
guides/tensorboard/: index.html
guides/yolo/: index.html
overrides/: main.html
reference/cli-commands/: index.html
reference/configuration/: index.html
reference/ndjson-conversion/: index.html
reference/settings/: index.html
reference/smart-split/: index.html
scratch/: test_report_v3.py
scripts/: clear_execstack.py
search/: search_index.json
src/: NAS_datasetAnalyzer.py  __init__.py  __main__.py  __version__.py  config_generator.py  models.py  run.py
src/augmentation/: __init__.py  engine.py  profiles.py  transforms.py
src/benchmark/: __init__.py  config.py  engine.py  metrics.py  report.py  thumbnails.py  vector_analysis.py
src/cli/: __init__.py  augment.py  benchmark.py  bump.py  convert_ndjson.py  export.py  predict.py  prepare_dataset.py  run.py  sam_predict.py  tensorboard_launcher.py  ultralytics_platform.py  upload.py
src/config/: __init__.py  generator.py  parameters.py  settings.py
src/datasets/: __init__.py  analyzer.py  cache.py  core.py  ndjson.py  prepare.py
src/integrations/: ultralytics_platform.py
src/models/: __init__.py  data.py  detectron2.py  rfdetr.py  sam.py
src/trainers/: __init__.py  common.py  detectron2_trainer.py  nas_trainer.py  rfdetr_trainer.py  sam_trainer.py  yolo_trainer.py
src/utils/: __init__.py  ai_client.py  cli.py  combine_datasets.py  export_config.py  ml_dependencies.py  project.py  tensorboard.py  training_preflight.py  trt_compiler.py  tui.py  version_check.py
superpowers/plans/2026-05-07-roboflow-upload-toggle/: index.html
superpowers/specs/2026-04-23-config-profile-wizard-design/: index.html
superpowers/specs/2026-04-23-cuda-auto-repair-design/: index.html
superpowers/specs/2026-04-30-predict-folder-progress-workers-design/: index.html
superpowers/specs/2026-05-07-roboflow-upload-toggle-design/: index.html
tests/: test_ai_client.py  test_augmentation_engine.py  test_augmentation_tui.py  test_benchmark_cli.py  test_benchmark_engine.py  test_benchmark_metrics.py  test_benchmark_report.py  test_convert_ndjson.py  test_dataset_cache.py  test_dataset_list_caching.py  test_dataset_summary.py  test_export_cli.py  test_imports.py  test_parameter_catalogs.py  test_pose_support.py  test_predict.py  test_prepare_dataset.py  test_project_utils.py  test_rfdetr_trainer.py  test_settings.py  test_training_preflight.py  test_tui_parameters.py  test_ultralytics_platform.py  test_update_flow.py  test_yolo_trainer.py
