[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "shahab"},
]
dependencies = [
  "ultralytics",
  "clearml",
  "pyyaml",
  "opencv-python",
  "torch",
  "torchvision",
  "onnx",
  "onnxruntime",
  "tabulate",
  "termcolor",
  "ruamel.yaml",
  "terminaltables",
  "blessed",
  "rich",
  "super-gradients>=3.7.1",
  "uv",
  "packaging",
  "setuptools<70",
  "pycocotools>=2.0.11",
]
description = "Automated YOLO training utilities and CLI"
license = "Apache-2.0"
name = "yolomatic"
readme = "README.md"
requires-python = ">=3.10,<3.11"
version = "2.0.0"

[tool.setuptools]
package-dir = {"src" = "src"}
packages = ["src", "src.cli", "src.config", "src.datasets", "src.models", "src.trainers", "src.utils"]

[project.scripts]
bump = "src.cli.bump:main"
yolomatic = "src.cli.run:main"
yolomatic-tensorboard = "src.cli.tensorboard_launcher:main"
yolomatic-train = "src.trainers.yolo_trainer:main"
