[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "shahab"},
]
dependencies = [
  "ultralytics",
  "clearml",
  "pyyaml",
  "opencv-python",
  "numpy==1.23.0",
  "torch",
  "torchvision",
  "tensorboard",
  "onnx",
  "onnxruntime",
  "tabulate",
  "termcolor",
  "ruamel.yaml",
  "terminaltables",
  "blessed",
  "rich",
  "python-dotenv",
  "roboflow",
  "super-gradients>=3.7.1",
  "uv",
  "packaging",
  "psutil",
  "setuptools<70",
  "pycocotools>=2.0.11",
]
description = "Automated YOLO training utilities and CLI — configure, train, predict, and upload YOLO26, YOLOv12, YOLOv11, YOLOv10, YOLOv9, YOLOv8, YOLOX, and YOLO-NAS models with an interactive terminal interface."
keywords = [
  "yolo",
  "yolo26",
  "yolov12",
  "yolov11",
  "yolov10",
  "yolov9",
  "yolov8",
  "yolox",
  "yolo-nas",
  "object-detection",
  "instance-segmentation",
  "pose-estimation",
  "oriented-object-detection",
  "computer-vision",
  "deep-learning",
  "machine-learning",
  "ultralytics",
  "pytorch",
  "training-cli",
  "tui",
  "clearml",
  "roboflow",
  "tensorboard",
  "coco",
  "model-training",
  "automated-training",
  "edge-deployment",
  "onnx",
  "cuda",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
license = "Apache-2.0"
name = "yolomatic"
readme = "README.md"
requires-python = ">=3.10,<3.11"
version = "3.1.0"

[tool.setuptools]
package-dir = {"src" = "src"}
packages = ["src", "src.cli", "src.config", "src.datasets", "src.models", "src.trainers", "src.utils"]

[project.scripts]
bump = "src.cli.bump:main"
yolomatic = "src.cli.run:main"
yolomatic-predict = "src.cli.predict:main"
yolomatic-tensorboard = "src.cli.tensorboard_launcher:main"
yolomatic-train = "src.trainers.yolo_trainer:main"
yolomatic-upload = "src.cli.upload:main"
