[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "Shahab Bahreini Jangjoo", email = "shahabahreini@hotmail.com"},
]
dependencies = [
  "ultralytics",
  "clearml",
  "pyyaml",
  "opencv-python",
  "numpy>=1.24.4",
  "torch",
  "torchvision",
  "tensorboard",
  "tensorflow>=2.16,<2.22; sys_platform != 'win32'",
  "onnx",
  "onnxslim>=0.1.71",
  "onnxruntime",
  "tabulate",
  "termcolor",
  "ruamel.yaml",
  "terminaltables",
  "blessed",
  "rich",
  "python-dotenv",
  "roboflow",
  "rfdetr[train,onnx,loggers,plus]>=1.6.5.post0",
  "packaging",
  "psutil",
  "pycocotools>=2.0.11",
  "transformers>=5.8,<6",
  "accelerate>=0.26",
  "plotly>=5.0",
  "umap-learn>=0.5",
  "Pillow>=9.0",
  "albumentations>=1.4",
  "openvino>=2024.0.0",
  "coremltools>=7.1.0; sys_platform != 'win32'",
  "ncnn>=1.0.3",
  "tensorrt-cu12>=7.0.0,!=10.2.0; sys_platform != 'darwin'",
]
description = "Automated object-detection training utilities and CLI — configure, train, predict, benchmark, and upload YOLO26, YOLOv12, YOLOv11, YOLOv10, YOLOv9, YOLOv8, YOLOX, RF-DETR, and SAM 3.1 models with an interactive terminal interface."
keywords = [
  "yolo",
  "yolo26",
  "yolov12",
  "yolov11",
  "yolov10",
  "yolov9",
  "yolov8",
  "yolox",
  "rf-detr",
  "sam-3.1",
  "segment-anything",
  "detectron2",
  "object-detection",
  "instance-segmentation",
  "computer-vision",
  "deep-learning",
  "machine-learning",
  "ultralytics",
  "pytorch",
  "training-cli",
  "fine-tuning",
  "tui",
  "clearml",
  "roboflow",
  "coco",
  "ndjson",
  "labelbox",
  "dataset-tools",
  "dataset-augmentation",
  "model-benchmarking",
  "model-training",
  "automated-training",
  "edge-deployment",
  "onnx",
  "cuda",
  "mps",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
license = "Apache-2.0"
name = "yolomatic"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "5.1.0"

[project.urls]
Changelog = "https://github.com/shahabahreini/YOLOMatic/blob/main/CHANGELOG.md"
Documentation = "https://shahabahreini.github.io/YOLOMatic/"
Funding = "https://github.com/sponsors"
Homepage = "https://github.com/shahabahreini/YOLOMatic"
Issues = "https://github.com/shahabahreini/YOLOMatic/issues"
Repository = "https://github.com/shahabahreini/YOLOMatic"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material[imaging]>=9.5",
  "pymdown-extensions>=10.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
package-dir = {"src" = "src"}
packages = ["src", "src.benchmark", "src.cli", "src.config", "src.datasets", "src.models", "src.trainers", "src.utils"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[project.scripts]
bump = "src.cli.bump:main"
yolomatic = "src.cli.run:main"
yolomatic-predict = "src.cli.predict:main"
yolomatic-tensorboard = "src.cli.tensorboard_launcher:main"
yolomatic-train = "src.trainers.yolo_trainer:main"
yolomatic-upload = "src.cli.upload:main"
yolomatic-benchmark = "src.cli.benchmark:main"
yolomatic-sam = "src.cli.sam_predict:main"
yolomatic-convert = "src.cli.convert_ndjson:main"
yolomatic-prepare = "src.cli.prepare_dataset:main"
yolomatic-ultralytics = "src.cli.ultralytics_platform:main"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12"
version = "11.0.0.114"
requires-dist = [
    "tensorrt-cu12-libs==11.0.0.114",
    "tensorrt-cu12-bindings==11.0.0.114",
]

[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12-libs"
version = "11.0.0.114"
requires-dist = []

[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12-bindings"
version = "11.0.0.114"
requires-dist = []
